--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             //  สำคัญ! : แก้ไข ID ของ LINE Official Account ของคุณตรงนี้
             //  ใส่ ID ที่ขึ้นต้นด้วย @ เช่น @123abcd
             // ===================================================================
-            const lineOA_ID = "@YOUR_LINE_OA_ID"; 
+            const lineOA_ID = "@drtophair"; 
             // ===================================================================
 
             // --- Function to get answers ---
@@ -301,3 +301,4 @@
     </script>
 </body>
 </html>
+
