--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 รบกวนแอดมินให้คำปรึกษาด้วยค่ะ
             `.trim();
 
-            if (lineOA_ID === "@YOUR_LINE_OA_ID") {
+            if (lineOA_ID === "@drtophair") {
                 alert("กรุณาตั้งค่า LINE OA ID ในไฟล์โค้ดก่อนใช้งาน");
                 return;
             }
@@ -301,4 +301,5 @@
     </script>
 </body>
 </html>
+
 
